#2.15 Partials with Pug

--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -2,10 +2,9 @@ doctype html
 html
     head
         title WeTube
+        script(src="https://kit.fontawesome.com/a3d426c7a6.js",crossorigin="anonymous")
     body
-        header
-            h1 WeTube
+        include ../partials/header
         main
             block content
-        footer
-            span &copy; WeTube
+        include ../partials/footer
