--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        title WeTube
+        title  | #{siteName}
         script(src="https://kit.fontawesome.com/a3d426c7a6.js",crossorigin="anonymous")
     body
         include ../partials/header
