--- a/views/changePassword.pug
+++ b/views/changePassword.pug
@@ -1,4 +1,9 @@
 extends layouts/main
 
 block content
-    p Change password
+    .form-container
+        form(action=`/users${routes.changePassword}`, method="post")
+            input(type="password", name="oldPassword", placeholder="Current Password")
+            input(type="password", name="newPassword", placeholder="New password")
+            input(type="password", name="newPassword", placeholder="Verify New Password")
+            input(type="submit", value="Change Password")
