--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -1,4 +1,13 @@
 extends layouts/main
 
 block content
-    p Video detail
+    .video__player
+        video(src=`/${video.fileUrl}`, controls=true, autoplay=true)
+    .video__info
+        a(href=routes.editVideo) Edit Video
+        h5.video__title=video.title
+        span.video__views=video.views
+        p.video__description=video.description
+
+
+
