--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -2,9 +2,11 @@ doctype html
 html
     head
         title #{pageTitle} | #{siteName}
-        script(src="https://kit.fontawesome.com/a3d426c7a6.js",crossorigin="anonymous")
+        link(rel="stylesheet", href="/static/styles.css")
     body
         include ../partials/header
         main
             block content
         include ../partials/footer
+        script(src="https://kit.fontawesome.com/a3d426c7a6.js",crossorigin="anonymous")
+        script(src="/static/main.js")
