--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -17,3 +17,17 @@ main {
   margin: 0 auto;
   min-height: 70vh;
 }
+
+button,
+input {
+  padding: 7px 10px;
+  width: 100%;
+  border-radius: 5px;
+  font-size: 12px;
+  color: $black;
+  font-weight: 600;
+  &::placeholder {
+    font-weight: 300;
+    color: rgba($color: #000000, $alpha: 0.6);
+  }
+}
