--- a/assets/scss/partials/header.scss
+++ b/assets/scss/partials/header.scss
@@ -1,6 +1,7 @@
 .header {
   background-color: $red;
   margin-bottom: 10px;
+  padding: 5px 0px;
   .header__wrapper {
     border: 5px 0px;
     width: 100%;
@@ -12,7 +13,7 @@
     .header__column {
       i {
         color: white;
-        font-size: 40px;
+        font-size: 32px;
       }
       &:nth-child(2) {
         width: 100%;
@@ -44,7 +45,7 @@
           font-weight: 600;
           &::placeholder {
             font-weight: 300;
-            color: rgba($color: #000000, $alpha: 0.6);
+            color: rgba($color: #000000, $alpha: 0.5);
           }
         }
       }
