--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -19,15 +19,32 @@ main {
 }
 
 button,
-input {
+input,
+textarea {
   padding: 7px 10px;
   width: 100%;
+  max-width: 320px;
+  border: none;
   border-radius: 5px;
   font-size: 12px;
   color: $black;
   font-weight: 600;
+  resize: none;
   &::placeholder {
     font-weight: 300;
     color: rgba($color: #000000, $alpha: 0.6);
   }
+}
+
+textarea {
+  width: 300px;
+}
+
+button {
+  background-color: #3498db;
+  color: white;
+}
+
+button.delete {
+  background-color: #c0392b;
 }
