--- a/assets/scss/partials/form.scss
+++ b/assets/scss/partials/form.scss
@@ -11,14 +11,22 @@
       display: block;
       width: 100%;
       padding: 10px;
-      box-shadow: 0px 10px 19px -10px rgba(0, 0, 0, 0.75);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
       &:not(:last-child) {
         margin-bottom: 25px;
       }
+    }
+    textarea {
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      margin-bottom: 25px;
     }
     input[type="submit"] {
       background-color: #3498db;
       color: white;
     }
+  }
+  a {
+    width: 100%;
+    max-width: 320px;
   }
 }
