--- a/static/styles.css
+++ b/static/styles.css
@@ -149,17 +149,32 @@ main {
   min-height: 70vh; }
 
 button,
-input {
+input,
+textarea {
   padding: 7px 10px;
   width: 100%;
+  max-width: 320px;
+  border: none;
   border-radius: 5px;
   font-size: 12px;
   color: #444444;
-  font-weight: 600; }
+  font-weight: 600;
+  resize: none; }
   button::placeholder,
-  input::placeholder {
+  input::placeholder,
+  textarea::placeholder {
     font-weight: 300;
     color: rgba(0, 0, 0, 0.6); }
+
+textarea {
+  width: 300px; }
+
+button {
+  background-color: #3498db;
+  color: white; }
+
+button.delete {
+  background-color: #c0392b; }
 
 .header {
   background-color: #ea232c;
@@ -233,14 +248,22 @@ input {
       display: block;
       width: 100%;
       padding: 10px;
-      box-shadow: 0px 10px 19px -10px rgba(0, 0, 0, 0.75); }
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
       .form-container form input:not(:last-child) {
         margin-bottom: 25px; }
+    .form-container form textarea {
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      margin-bottom: 25px; }
     .form-container form input[type="submit"] {
       background-color: #3498db;
       color: white; }
+  .form-container a {
+    width: 100%;
+    max-width: 320px; }
 
 .social-login {
+  width: 100%;
+  max-width: 320px;
   display: flex;
   flex-direction: column;
   align-items: center; }
@@ -262,3 +285,31 @@ input {
   .social-login .social-login--facebook {
     background-color: #3a5998;
     color: white; }
+
+.video-detail__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .video-detail__container .video__info {
+    width: 100%;
+    max-width: 480px;
+    margin-top: 25px; }
+    .video-detail__container .video__info button {
+      width: 100px;
+      margin-bottom: 15px; }
+    .video-detail__container .video__info .video__title,
+    .video-detail__container .video__info .video__views,
+    .video-detail__container .video__info .video__description {
+      display: block;
+      margin-bottom: 15px; }
+    .video-detail__container .video__info .video__title {
+      font-size: 24px;
+      font-weight: 300; }
+    .video-detail__container .video__info .video__views {
+      font-size: 14px; }
+    .video-detail__container .video__info .video__description {
+      font-size: 16px; }
+  .video-detail__container .video__comments {
+    margin-top: 25px; }
+    .video-detail__container .video__comments .video__comment-number {
+      font-size: 18px; }
