--- a/assets/scss/partials/form.scss
+++ b/assets/scss/partials/form.scss
@@ -7,7 +7,8 @@
     width: 100%;
     max-width: 320px;
     margin: 25px 0;
-    input {
+    input:not([type="file"]),
+    .fileUpload {
       display: block;
       width: 100%;
       padding: 10px;
@@ -28,5 +29,12 @@
   a {
     width: 100%;
     max-width: 320px;
+  }
+  .fileUpload {
+    max-width: 300px;
+    label {
+      font-weight: 500;
+      margin-right: 5px;
+    }
   }
 }
