--- a/static/styles.css
+++ b/static/styles.css
@@ -132,6 +132,11 @@ input {
   input:focus, input:active {
     outline: none; }
 
+a {
+  color: black;
+  text-decoration: none;
+  outline: none; }
+
 html,
 body {
   height: 100%; }
@@ -149,20 +154,23 @@ main {
   min-height: 70vh; }
 
 button,
-input,
-textarea {
+input:not([type="file"]),
+textarea,
+.fileUpload {
   padding: 7px 10px;
   width: 100%;
   max-width: 320px;
   border: none;
   border-radius: 5px;
   font-size: 12px;
+  background-color: white;
   color: #444444;
   font-weight: 600;
   resize: none; }
   button::placeholder,
-  input::placeholder,
-  textarea::placeholder {
+  input:not([type="file"])::placeholder,
+  textarea::placeholder,
+  .fileUpload::placeholder {
     font-weight: 300;
     color: rgba(0, 0, 0, 0.6); }
 
@@ -175,6 +183,18 @@ button {
 
 button.delete {
   background-color: #c0392b; }
+
+.home-videos {
+  display: grid;
+  grid-template-columns: repeat(6, minmax(150px, 1fr));
+  gap: 25px; }
+  .home-videos .videoBlock:first-child,
+  .home-videos .videoBlock:nth-child(2) {
+    grid-column: span 3; }
+  .home-videos .videoBlock:nth-child(3),
+  .home-videos .videoBlock:nth-child(4),
+  .home-videos .videoBlock:nth-child(5) {
+    grid-column: span 2; }
 
 .header {
   background-color: #ea232c;
@@ -244,12 +264,14 @@ button.delete {
     width: 100%;
     max-width: 320px;
     margin: 25px 0; }
-    .form-container form input {
+    .form-container form input:not([type="file"]),
+    .form-container form .fileUpload {
       display: block;
       width: 100%;
       padding: 10px;
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
-      .form-container form input:not(:last-child) {
+      .form-container form input:not([type="file"]):not(:last-child),
+      .form-container form .fileUpload:not(:last-child) {
         margin-bottom: 25px; }
     .form-container form textarea {
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -260,6 +282,11 @@ button.delete {
   .form-container a {
     width: 100%;
     max-width: 320px; }
+  .form-container .fileUpload {
+    max-width: 300px; }
+    .form-container .fileUpload label {
+      font-weight: 500;
+      margin-right: 5px; }
 
 .social-login {
   width: 100%;
@@ -285,6 +312,23 @@ button.delete {
   .social-login .social-login--facebook {
     background-color: #3a5998;
     color: white; }
+
+.videoBlock video {
+  width: 100%;
+  margin-bottom: 10px; }
+
+.videoBlock .videoBlock__title {
+  font-size: 18px;
+  font-weight: 300;
+  margin-bottom: 10px; }
+
+.videoBlock .videoBlock__views {
+  margin-bottom: 10px; }
+
+a,
+button,
+input[type="submit"] {
+  cursor: pointer; }
 
 .video-detail__container {
   display: flex;
@@ -313,3 +357,15 @@ button.delete {
     margin-top: 25px; }
     .video-detail__container .video__comments .video__comment-number {
       font-size: 18px; }
+
+.home-videos {
+  display: grid;
+  grid-template-columns: repeat(6, minmax(150px, 1fr));
+  gap: 25px; }
+  .home-videos .videoBlock:first-child,
+  .home-videos .videoBlock:nth-child(2) {
+    grid-column: span 3; }
+  .home-videos .videoBlock:nth-child(3),
+  .home-videos .videoBlock:nth-child(4),
+  .home-videos .videoBlock:nth-child(5) {
+    grid-column: span 2; }
