--- a/static/styles.css
+++ b/static/styles.css
@@ -278,7 +278,8 @@ button.delete {
       margin-bottom: 25px; }
     .form-container form input[type="submit"] {
       background-color: #3498db;
-      color: white; }
+      color: white;
+      margin-bottom: 20px; }
   .form-container a {
     width: 100%;
     max-width: 320px; }
@@ -302,7 +303,7 @@ button.delete {
     justify-content: center;
     align-items: center; }
     .social-login button:not(:last-child) {
-      margin-bottom: 25px; }
+      margin-bottom: 15px; }
     .social-login button span {
       margin-right: 10px;
       font-size: 16px; }
