--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -8,7 +8,7 @@ header.header
                 input(type="text", placeholder='검색어를 입력하세요', name='term' onfocus="this.placeholder=''" onblur="this.placeholder='검색어를 입력하세요'")
         .header__column
             ul
-                if !user
+                if !user.isAuthenticated
                     li
                         a(href=routes.join) Join
                     li
