#6.7 Github Log In Part Two

--- a/static/styles.css
+++ b/static/styles.css
@@ -307,6 +307,8 @@ button.delete {
     .social-login button span {
       margin-right: 10px;
       font-size: 16px; }
+    .social-login button a {
+      color: white; }
   .social-login .social-login--github {
     background-color: #444444;
     color: white; }
