--- a/assets/scss/partials/socialLogin.scss
+++ b/assets/scss/partials/socialLogin.scss
@@ -18,6 +18,9 @@
       margin-right: 10px;
       font-size: 16px;
     }
+    a {
+      color: white;
+    }
   }
   .social-login--github {
     background-color: $black;
