--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -45,6 +45,8 @@ textarea {
 button {
   background-color: #3498db;
   color: white;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  padding: 10px;
 }
 
 button.delete {
