--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,7 +1,7 @@
 @import "config/_variables.scss";
 @import "config/reset.scss";
+@import "config/utils.scss";
 @import "main.scss";
-@import "pages/home.scss";
 
 @import "partials/header.scss";
 @import "partials/footer.scss";
@@ -9,5 +9,6 @@
 @import "partials/socialLogin.scss";
 @import "partials/videoBlock.scss";
 
-@import "pages/videoDetail.scss";
 @import "pages/home.scss";
+@import "pages/videoDetail.scss";
+@import "pages/userDetail.scss";
