--- a/static/styles.css
+++ b/static/styles.css
@@ -137,6 +137,11 @@ a {
   text-decoration: none;
   outline: none; }
 
+.u-avatar {
+  height: 80px;
+  background-color: #ea232c;
+  border-radius: 50%; }
+
 html,
 body {
   height: 100%; }
@@ -179,26 +184,16 @@ textarea {
 
 button {
   background-color: #3498db;
-  color: white; }
+  color: white;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  padding: 10px; }
 
 button.delete {
   background-color: #c0392b; }
 
-.home-videos {
-  display: grid;
-  grid-template-columns: repeat(6, minmax(150px, 1fr));
-  gap: 25px; }
-  .home-videos .videoBlock:first-child,
-  .home-videos .videoBlock:nth-child(2) {
-    grid-column: span 3; }
-  .home-videos .videoBlock:nth-child(3),
-  .home-videos .videoBlock:nth-child(4),
-  .home-videos .videoBlock:nth-child(5) {
-    grid-column: span 2; }
-
 .header {
   background-color: #ea232c;
-  margin-bottom: 10px;
+  margin-bottom: 40px;
   padding: 5px 0px; }
   .header .header__wrapper {
     border: 5px 0px;
@@ -333,34 +328,6 @@ button,
 input[type="submit"] {
   cursor: pointer; }
 
-.video-detail__container {
-  display: flex;
-  flex-direction: column;
-  align-items: center; }
-  .video-detail__container .video__info {
-    width: 100%;
-    max-width: 480px;
-    margin-top: 25px; }
-    .video-detail__container .video__info button {
-      width: 100px;
-      margin-bottom: 15px; }
-    .video-detail__container .video__info .video__title,
-    .video-detail__container .video__info .video__views,
-    .video-detail__container .video__info .video__description {
-      display: block;
-      margin-bottom: 15px; }
-    .video-detail__container .video__info .video__title {
-      font-size: 24px;
-      font-weight: 300; }
-    .video-detail__container .video__info .video__views {
-      font-size: 14px; }
-    .video-detail__container .video__info .video__description {
-      font-size: 16px; }
-  .video-detail__container .video__comments {
-    margin-top: 25px; }
-    .video-detail__container .video__comments .video__comment-number {
-      font-size: 18px; }
-
 .home-videos {
   display: grid;
   grid-template-columns: repeat(6, minmax(150px, 1fr));
@@ -372,3 +339,51 @@ input[type="submit"] {
   .home-videos .videoBlock:nth-child(4),
   .home-videos .videoBlock:nth-child(5) {
     grid-column: span 2; }
+
+.video-detail__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .video-detail__container .video__info {
+    width: 100%;
+    max-width: 480px;
+    margin-top: 25px; }
+    .video-detail__container .video__info button {
+      width: 100px;
+      margin-bottom: 30px; }
+    .video-detail__container .video__info .video__title,
+    .video-detail__container .video__info .video__views,
+    .video-detail__container .video__info .video__description {
+      display: block;
+      margin-bottom: 15px; }
+    .video-detail__container .video__info .video__title {
+      font-size: 24px;
+      font-weight: 500; }
+    .video-detail__container .video__info .video__views {
+      font-size: 14px; }
+    .video-detail__container .video__info .video__description {
+      font-size: 16px; }
+  .video-detail__container .video__comments {
+    margin-top: 25px; }
+    .video-detail__container .video__comments .video__comment-number {
+      font-size: 18px; }
+
+.user-profile {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column; }
+  .user-profile .user-profile__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px; }
+    .user-profile .user-profile__header .profile__username {
+      font-size: 16px;
+      margin-top: 10px; }
+  .user-profile .user-profile__btns {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .user-profile a:not(last-child) {
+    margin-bottom: 20px; }
