Revert "#8.0 Starting the Video Player"
This reverts commit 02d1e7254265edb426da2cb75ac81fe459a0f748.

--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -1,15 +1,11 @@
 extends layouts/main
-include mixins/videoPlayer
 
 block content
     .video-detail__container
-        +videoPlayer({
-            src:video.fileUrl
-        })
         .video__player
             video(src=`/${video.fileUrl}`, controls=true, autoplay=true)
         .video__info
-            if loggedUser && video.creator.id === loggedUser.id
+            if video.creator.id === loggedUser.id
                 a(href=routes.editVideo(video.id)) 
                     button Edit Video
             h5.video__title=video.title
