--- a/static/styles.css
+++ b/static/styles.css
@@ -191,6 +191,9 @@ button {
 button.delete {
   background-color: #c0392b; }
 
+div {
+  box-sizing: border-box; }
+
 .header {
   background-color: #ea232c;
   margin-bottom: 40px;
@@ -327,6 +330,38 @@ a,
 button,
 input[type="submit"] {
   cursor: pointer; }
+
+.videoPlayer {
+  position: relative; }
+  .videoPlayer:hover .videoPlayer__controls {
+    opacity: 1; }
+  .videoPlayer video {
+    max-width: 100%; }
+  .videoPlayer .videoPlayer__controls {
+    opacity: 0;
+    transition: opacity 0.4s linear;
+    position: absolute;
+    width: 100%;
+    bottom: 2px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    z-index: 1;
+    font-size: 12px; }
+    .videoPlayer .videoPlayer__controls .videoPlayer__column:first-child {
+      display: flex;
+      align-items: center; }
+      .videoPlayer .videoPlayer__controls .videoPlayer__column:first-child span:first-child {
+        margin-right: 10px; }
+    .videoPlayer .videoPlayer__controls .videoPlayer__column:last-child {
+      justify-self: end; }
+    .videoPlayer .videoPlayer__controls .videoPlayer__column:nth-child(2) {
+      justify-self: center; }
+    .videoPlayer .videoPlayer__controls i {
+      font-size: 16px;
+      cursor: pointer; }
 
 .home-videos {
   display: grid;
