--- a/static/styles.css
+++ b/static/styles.css
@@ -354,7 +354,16 @@ input[type="submit"] {
     .videoPlayer .videoPlayer__controls .videoPlayer__column:first-child {
       display: flex;
       align-items: center; }
-      .videoPlayer .videoPlayer__controls .videoPlayer__column:first-child span:first-child {
+      .videoPlayer .videoPlayer__controls .videoPlayer__column:first-child .videoPlayer__volume-container input {
+        position: absolute;
+        bottom: 140px;
+        left: 7px;
+        width: 80px;
+        padding: 0;
+        margin-bottom: 30px;
+        transform-origin: 75px 75px;
+        transform: rotate(-90deg); }
+      .videoPlayer .videoPlayer__controls .videoPlayer__column:first-child span#jsVolumeBtn {
         margin-right: 10px; }
     .videoPlayer .videoPlayer__controls .videoPlayer__column:last-child {
       justify-self: end; }
