--- a/views/mixins/videoPlayer.pug
+++ b/views/mixins/videoPlayer.pug
@@ -3,11 +3,13 @@ mixin videoPlayer(video={})
         video(src=`/${video.src}`)
         .videoPlayer__controls
             .videoPlayer__column
+                .videoPlayer__volume-container
+                    input.videoPlayer__volume#jsVolume(type="range", min="0", max="1", step="0.1", value="0.5")
                 span#jsVolumeBtn
                     i.fas.fa-volume-up
                 span
                     span#currentTime 00:00:00 
-                    |/ 
+                    span /   
                     span#totalTime 00:00:00
             .videoPlayer__column
                 span#jsPlayButton
