--- a/views/mixins/videoPlayer.pug
+++ b/views/mixins/videoPlayer.pug
@@ -6,9 +6,9 @@ mixin videoPlayer(video={})
                 input.videoPlayer__volume#jsVolume(type="range", min="0", max="1", step="0.1", value="0.5")
                 span#jsVolumeBtn
                     i.fas.fa-volume-up
-                span
+                span#timeLine
                     span#currentTime 00:00:00 
-                    span / 
+                    span /
                     span#totalTime 00:00:00
             .videoPlayer__column
                 span#jsPlayButton
