--- a/views/mixins/videoPlayer.pug
+++ b/views/mixins/videoPlayer.pug
@@ -5,7 +5,7 @@ mixin videoPlayer(video={})
             .videoPlayer__column
                 input.videoPlayer__volume#jsVolume(type="range", min="0", max="1", step="0.1", value="0.5")
                 span#jsVolumeBtn
-                    i.fas.fa-volume-up
+                    i.fas.fa-volume-down
                 span#timeLine
                     span#currentTime 00:00:00 
                     span /
