--- a/static/styles.css
+++ b/static/styles.css
@@ -171,7 +171,8 @@ textarea,
   background-color: white;
   color: #444444;
   font-weight: 600;
-  resize: none; }
+  resize: none;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
   button::placeholder,
   input:not([type="file"])::placeholder,
   textarea::placeholder,
@@ -414,9 +415,29 @@ input[type="submit"] {
     .video-detail__container .video__info .video__description {
       font-size: 16px; }
   .video-detail__container .video__comments {
-    margin-top: 25px; }
+    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
     .video-detail__container .video__comments .video__comment-number {
-      font-size: 18px; }
+      font-size: 18px;
+      margin-bottom: 20px; }
+    .video-detail__container .video__comments .add_comment {
+      margin-top: 25px;
+      width: 100%; }
+      .video-detail__container .video__comments .add_comment input {
+        width: 100%; }
+    .video-detail__container .video__comments .video__comments-list {
+      margin-top: 50px; }
+      .video-detail__container .video__comments .video__comments-list li {
+        background-color: #3498db;
+        color: white;
+        padding: 15px 30px;
+        border-radius: 20px;
+        border-bottom-left-radius: 5px; }
+        .video-detail__container .video__comments .video__comments-list li:not(:last-child) {
+          margin-bottom: 15px; }
 
 .user-profile {
   width: 100%;
