--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -28,7 +28,6 @@ block content
                 input(type="text" placeholder="Add a comment")
             ul.video__comments-list
                 each comment in video.comments
-                    li
-                        span=comment.text
+                    span comment.text
 
 
