--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -23,7 +23,12 @@ block content
             if video.comments.length === 1
                 span.video__comment-number 1 comment
             else 
-                span.video__comment-number #{video.comments.length} comments
-
+                span.video__comment-number #{video.comments.length} comments 
+            form.video__comments-form#jsAddComment
+                input(type="text", placeholder="Add a Comment")
+            ul.video__comments-view
+                each comment in video.comments
+                    li.video__comments-text
+                        span=comment.text
 
 
