--- a/assets/scss/pages/videoDetail.scss
+++ b/assets/scss/pages/videoDetail.scss
@@ -34,8 +34,39 @@
   }
   .video__comments {
     margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     .video__comment-number {
       font-size: 18px;
+      margin-bottom: 20px;
+    }
+    .video__comments-add {
+      input {
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        margin-bottom: 30px;
+      }
+    }
+    .video__comments__list {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 70%;
+      li:not(:last-child) {
+        margin-bottom: 15px;
+      }
+      li {
+        display: flex;
+        justify-content: center;
+        background-color: #3498db;
+        color: white;
+        padding: 10px 20px;
+        width: 100%;
+        border-radius: 20px;
+        border-bottom-left-radius: 0;
+      }
     }
   }
 }
