--- a/static/styles.css
+++ b/static/styles.css
@@ -414,9 +414,34 @@ input[type="submit"] {
     .video-detail__container .video__info .video__description {
       font-size: 16px; }
   .video-detail__container .video__comments {
-    margin-top: 25px; }
+    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
     .video-detail__container .video__comments .video__comment-number {
-      font-size: 18px; }
+      font-size: 18px;
+      margin-bottom: 20px; }
+    .video-detail__container .video__comments .video__comments-add input {
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      margin-bottom: 30px; }
+    .video-detail__container .video__comments .video__comments__list {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 70%; }
+      .video-detail__container .video__comments .video__comments__list li:not(:last-child) {
+        margin-bottom: 15px; }
+      .video-detail__container .video__comments .video__comments__list li {
+        display: flex;
+        justify-content: center;
+        background-color: #3498db;
+        color: white;
+        padding: 10px 20px;
+        width: 100%;
+        border-radius: 20px;
+        border-bottom-left-radius: 0; }
 
 .user-profile {
   width: 100%;
