#delete comment part

--- a/assets/scss/pages/videoDetail.scss
+++ b/assets/scss/pages/videoDetail.scss
@@ -53,17 +53,27 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      width: 70%;
+      width: 100%;
       li:not(:last-child) {
         margin-bottom: 15px;
       }
       li {
         display: flex;
         justify-content: center;
+        align-items: center;
+        width: 100%;
+        button {
+          width: 50px;
+          padding: 5px 0;
+          background-color: $dark-grey;
+          margin-left: 10px;
+        }
+      }
+      span {
+        width: 100%;
         background-color: #3498db;
         color: white;
         padding: 10px 20px;
-        width: 100%;
         border-radius: 20px;
         border-bottom-left-radius: 0;
       }
