--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -35,6 +35,7 @@ block content
                     
                         li.video__comments__list-text
                             span#jsCommentText=comment.text
+                            button#jsDeleteButton ❌
                             
                     
 
